--- a/src/networkMarket/client/views/loginView.fxml
+++ b/src/networkMarket/client/views/loginView.fxml
@@ -13,55 +13,60 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<TabPane fx:id="tabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="networkMarket.client.controllers.LoginController">
+<TabPane fx:id="tabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+         prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.60"
+         xmlns:fx="http://javafx.com/fxml/1" fx:controller="networkMarket.client.controllers.LoginController">
     <tabs>
         <Tab text="Log In">
             <content>
                 <GridPane>
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                     </rowConstraints>
                     <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Log in, yo!" GridPane.halignment="RIGHT">
                             <font>
-                                <Font size="24.0" />
+                                <Font size="24.0"/>
                             </font>
                         </Text>
                         <Label text="Username: " GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="18.0"/>
                             </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="184.0" text="Password: " GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+                        <Label layoutX="10.0" layoutY="184.0" text="Password: " GridPane.halignment="RIGHT"
+                               GridPane.rowIndex="2">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="18.0"/>
                             </font>
                         </Label>
-                        <TextField fx:id="loginUsernameField" onAction="#loginUsernameAction" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <TextField fx:id="loginUsernameField" onAction="#loginUsernameAction" GridPane.columnIndex="1"
+                                   GridPane.rowIndex="1">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="18.0"/>
                             </font>
                         </TextField>
-                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" text="Login" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" text="Login"
+                                GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="18.0"/>
                             </font>
                         </Button>
-                  <PasswordField fx:id="loginPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </PasswordField>
+                        <PasswordField fx:id="loginPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                        </PasswordField>
                     </children>
                     <padding>
-                        <Insets right="20.0" />
+                        <Insets right="20.0"/>
                     </padding>
                 </GridPane>
             </content>
@@ -70,49 +75,51 @@
             <content>
                 <GridPane>
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                     </rowConstraints>
                     <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Register, yo!" GridPane.halignment="RIGHT">
                             <font>
-                                <Font size="24.0" />
+                                <Font size="24.0"/>
                             </font>
                         </Text>
                         <Label text="Username: " GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="18.0"/>
                             </font>
                         </Label>
-                        <TextField fx:id="registerUsernameField" onAction="#registerUsernameAction" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <TextField fx:id="registerUsernameField" onAction="#registerUsernameAction"
+                                   GridPane.columnIndex="1" GridPane.rowIndex="1">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="18.0"/>
                             </font>
                         </TextField>
                         <Label text="Password: " GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="18.0"/>
                             </font>
                         </Label>
-                        <Button fx:id="registerButton" mnemonicParsing="false" onAction="#register" text="Register" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+                        <Button fx:id="registerButton" mnemonicParsing="false" onAction="#register" text="Register"
+                                GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="18.0"/>
                             </font>
                         </Button>
-                  <PasswordField fx:id="registerPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </PasswordField>
+                        <PasswordField fx:id="registerPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                        </PasswordField>
                     </children>
                     <padding>
-                        <Insets right="20.0" />
+                        <Insets right="20.0"/>
                     </padding>
                 </GridPane>
             </content>
