--- a/src/networkMarket/client/views/sellView.fxml
+++ b/src/networkMarket/client/views/sellView.fxml
@@ -10,50 +10,53 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane fx:controller="networkMarket.client.controllers.SellController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sell an item" GridPane.halignment="RIGHT">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Text>
-      <Label text="item name: " GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label text="item price: " GridPane.halignment="RIGHT" GridPane.rowIndex="2">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="priceField" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
-      <Button onAction="#sell" mnemonicParsing="false" text="Sell item" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-   </children>
-   <padding>
-      <Insets right="20.0" />
-   </padding>
+<GridPane fx:controller="networkMarket.client.controllers.SellController" maxHeight="-Infinity" maxWidth="-Infinity"
+          minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
+          xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+    </rowConstraints>
+    <children>
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sell an item" GridPane.halignment="RIGHT">
+            <font>
+                <Font size="24.0"/>
+            </font>
+        </Text>
+        <Label text="item name: " GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <Label text="item price: " GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </TextField>
+        <TextField fx:id="priceField" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </TextField>
+        <Button onAction="#sell" mnemonicParsing="false" text="Sell item" GridPane.columnIndex="1"
+                GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Button>
+    </children>
+    <padding>
+        <Insets right="20.0"/>
+    </padding>
 </GridPane>
